--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,12 @@ dependencies = [
     "sqlalchemy>=2.0.36",
     "uvicorn[standart]>=0.32.1",
 ]
+
+[dependency-groups]
+dev = [
+    "taskipy>=1.14.0",
+]
+
+[tool.taskipy.tasks]
+pre_dev = "docker compose up -d"
+dev = "uvicorn main:app --reload"
