--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.5",
     "jinja2>=3.1.4",
     "psycopg2-binary>=2.9.10",
+    "python-multipart>=0.0.19",
     "redis>=5.2.0",
     "sqlalchemy>=2.0.36",
     "uvicorn[standart]>=0.32.1",
@@ -16,9 +17,27 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pytest>=8.3.3",
+    "pytest-sugar>=1.0.0",
     "taskipy>=1.14.0",
+    "ruff>=0.7.2",
+    "pytest-cov>=6.0.0",
 ]
 
 [tool.taskipy.tasks]
+lint = "ruff check . && ruff . --diff"
+format = "ruff check . --fix && ruff format ."
 pre_dev = "docker compose up -d"
-dev = "uvicorn main:app --reload"
+dev = "uvicorn ecommerce.__main__:app --reload"
+
+[tool.ruff]
+line-length = 79
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["F", "W", "E", "I", "RET", "R", "ANN"]
+ignore = ["ANN101", "ANN102"]
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "space"
