--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "boto3>=1.35.83",
     "email-validator>=2.2.0",
     "fastapi>=0.115.5",
+    "httpx[http2]>=0.28.1",
     "jinja2>=3.1.4",
     "oci>=2.141.0",
     "psycopg2-binary>=2.9.10",
